src/css/styles/desk/storage.css
/* Storage */

#storage {
    flex: 1 1 auto;
    width: 100%;
    min-height: 68px;

    display: flex;
    align-content: center;
    align-items: flex-end;
    justify-content: space-between;
}

#storage .wrap {
    width: 48px;
    height: 48px;
}

#storage #dump {
    width: 48px;
    height: 48px;
    background-color: grey;
    border-radius: 50%;
    aspect-ratio: 1 / 1;
    display: flex;
    align-items: center;
    justify-content: center;
    color: white;
    font-size: 24px;
}

#storage #storage-upgrade {
    width: 48px;
    height: 48px;
    aspect-ratio: 1 / 1;
    background-color: unset;
    border: 1px dashed grey;
    border-radius: 50%;
    transition: width var(--width), opacity var(--opacity);
    transition-timing-function: cubic-bezier(0.18, 0.89, 0.32, 1.28);
}
#storage #storage-upgrade.hint {
    border: var(--bolder-border--light-border);
}
#storage #storage-upgrade.blank {
    border: var(--bolder-border--bold-border);
}

#storage #points{
    --storage-points-per-row: 5;
    --storage-points-dimension: 60px;
    --storage-points-margin: 12px;
    --storage-points-max-width: calc((var(--storage-points-dimension) + var(--storage-points-margin)) * var(--storage-points-per-row) + var(--storage-points-margin));


    display: flex;
    flex-wrap: wrap;
    gap: var(--storage-points-margin);
    max-width: var(--storage-points-max-width);

    /* --storage-points-grid-col: 1;
    --storage-points-grid-rows: 1;
    --storage-points-grid-flow: column;

    display: grid;
    grid-template-columns: repeat(var(--storage-points-grid-col), 60px);
    grid-template-rows: repeat(var(--storage-points-grid-rows), 60px);
    grid-auto-flow: var(--storage-points-grid-flow);
    grid-auto-columns: auto;
    grid-auto-rows: 60px; */

    align-items: center;
    justify-items: center;
    justify-content: center;
    align-content: center;
}

#storage #points .wrap {
    width: 60px;
    height: 60px;
}

#storage #points div.point {
    transition: width var(--width), height var(--width), transform 270ms 60ms;
    transition-timing-function: cubic-bezier(0.18, 0.89, 0.32, 1.28);
}

#storage #points div.point:hover {
    transform: translateY(-12px);
}
#storage #points div.point.solid:hover {
    transform: translateY(-6px);
}

